@@ -1,3 +1,5 @@
+- when skipping bootloader installation, correctly say "None" in summary 
+  (#39101)
 - correctly set country when given lang=xxx on /proc/cmdline
   (regression introduced in 10.16) (#39104)
 
